# birdbot

./: .editorconfig  .env.example  README.md  dev.sh  docker-compose.dev.yml  docker-compose.yml  launch-open-db.sh  prod.sh
bot/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  admins.example.txt  build_birdbot_powerhouse.sh  package-lock.json  package.json  tsconfig.json
bot/resources/: en.dictionary.example.txt  fr.dictionary.example.txt
bot/src/: bot.rs  handle_message.rs  handle_socketio_message.rs  index.example.ts  index.ts  main.rs  room.rs  utils.rs
bot/src/bots/birdbot/: BirdBot.class.ts  BirdBotCommands.ts  BirdBotConstants.ts  BirdBotEnv.ts  BirdBotEventHandlers.ts  BirdBotPowerHouse.ts  BirdBotResources.ts  BirdBotServer.ts  BirdBotTexts.ts  BirdBotTypes.ts  BirdBotUtils.class.ts  BirdbotPeriodicTasks.ts
bot/src/game/: find_word.rs  handle_message.rs  handle_socketio_message.rs  mod.rs
bot/src/handle_message/: parse_message.rs  respond_message.rs
bot/src/handle_message/respond_message/: find_word.rs  game.rs  room.rs
bot/src/handle_socketio_message/: parse_socketio_message.rs  respond_message.rs
bot/src/handle_socketio_message/game/: find_word.rs  handle_game_message.rs  handle_socketio_game_message.rs
bot/src/handle_socketio_message/respond_message/: socketio_common_handlers.rs  socketio_game_handlers.rs  socketio_room_handlers.rs
bot/src/lib/: env.ts  paths.ts
bot/src/lib/class/: Bot.class.ts  Room.class.ts  (+6 more)
bot/src/room/: handle_socketio_message.rs  mod.rs
bot/src/scripts/: sort-resources.ts
bot/src/utils/: mod.rs
(+214 files in other folders)
