[package]
name = "bot"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.11.6"
futures-util = "0.3.31"
rand = "0.8.5"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
tokio = { version = "1.43.0", features = ["full"] }
tokio-tungstenite = { version = "0.26.1", features = ["native-tls"] }
tungstenite = "0.26.1"
url = "2.5.4"
